# canvas_platform

./: .gitignore  README.md  UserProfile  UserProfile.py  UserProfilePhotoView.py  UserProfilePhtotoSerializer.py  api_documentation.md
canvas/: manage.py  pyproject.toml  requirements.txt
canvas/accounts/: adapter.py  adapters.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py
canvas/accounts/migrations/: 0001_initial.py  0002_customuser_groups_customuser_is_superuser_and_more.py  0003_customuser_role_alter_customuser_username.py  0004_alter_customuser_role.py  0005_alter_customuser_date_joined.py  0006_alter_customuser_date_joined.py  0007_customuser_image.py
canvas/canvas/: asgi.py  settings.py  urls.py  wsgi.py
canvas/courses/: models.py  serializers.py  urls.py  views.py
canvas/courses/migrations/: 0001_initial.py
