[tool.poetry]
name = "canvas"
version = "0.1.0"
description = ""
authors = ["trekfest", "coltenus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cryptography = "43.0.1"
dj-rest-auth = "6.0.0"
django = "5.1.1"
django-allauth = "65.0.2"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
idna = "3.10"
pycparser = "2.22"
pyjwt = "2.9.0"
python-decouple = "3.8"
python-dotenv = "1.0.1"
requests = "2.32.3"
six = "1.16.0"
sqlparse = "0.5.1"
tzdata = "2024.2"
urllib3 = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
